Fix commented out code and enable pairplot

--- a/Homework3/assignment 3.Rmd
+++ b/Homework3/assignment 3.Rmd
@@ -103,8 +103,8 @@ print(names(data))
 
 ## Make Pairplot
 ```{r}
-# ggpairs(data, columns = c("carat", "cut", "color", "clarity",
-#                           "depth", "table", "price", "x", "y", "z"))
+ggpairs(data, columns = c("carat", "cut", "color", "clarity",
+                          "depth", "table", "price", "x", "y", "z"))
 ```
 
 ## Make Correlation Plot
