Update ggpairs columns

--- a/Homework3/assignment 3.Rmd
+++ b/Homework3/assignment 3.Rmd
@@ -103,7 +103,7 @@ print(names(data))
 
 ## Make Pairplot
 ```{r}
-ggpairs(data, columns = names(data))
+ggpairs(data, columns = c("price", "carat", "depth", "table", "x", "y", "z"))
 ```
 
 ## Make Correlation Plot
