Update categorical variable transformation

--- a/Homework3/assignment 3.Rmd
+++ b/Homework3/assignment 3.Rmd
@@ -43,7 +43,7 @@ column_names <- names(data)
 print(column_names)
 ```
 
-## Tranform Categorical variables using dummy variables
+## Tranform Categorical variables to factors
 ```{r}
 
 data <- data %>%
